--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-vue": "^2.0.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
+    "sass-resources-loader": "^2.0.1",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
