--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,13 @@
 {
   "root": true,
-  "parserOptions": {
-      "ecmaFeatures": {
-        "experimentalObjectRestSpread": true
-      },
-      "ecmaVersion": 6,
-      "sourceType": "module"
-  },
   "env": {
-      "browser": true,
-      "commonjs": true,
-      "es6": true
+    "node": true,
   },
-  "extends": "eslint:recommended",
-  "plugins": ["vue"],
-  "rules": {
-      "indent": ["error", 4, { "SwitchCase": 1 }],
-      "quotes": ["error", "single"],
-      "semi": ["error", "always"],
-      "vue/jsx-uses-vars": 2,
-      "no-console": ["error"]
-  }
+  "extends": [
+    "plugin:vue/essential",
+    "@vue/airbnb",
+  ],
+  "parserOptions": {
+    "parser": "babel-eslint",
+  },
 }
