--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint \"src/**\"",
+    "test": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 9001",
     "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.5.5",
+    "core-js": "^2.6.5",
     "@storybook/addon-a11y": "^5.1.10",
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-contexts": "^5.1.10",
@@ -20,6 +20,7 @@
     "@storybook/addon-notes": "^5.1.10",
     "@storybook/addon-storysource": "^5.1.10",
     "@storybook/vue": "^5.1.10",
+    "@vue/babel-preset-app": "^3.10.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
@@ -30,10 +31,31 @@
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
     "vue-no-ssr": "^1.1.1",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-unit-jest": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-jest": "^24.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel7-jest": "^1.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-vue": "^5.2.3"
+    "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-serializer-html": "^7.0.0",
+    "jest-serializer-vue": "^2.0.2",
+    "vue-jest": "^3.0.4"
   }
 }
