--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "root": true,
   "env": {
-    "node": true
+    "node": true,
+    "jest": true,
   },
   "extends": [
     "plugin:vue/essential",
