--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-unit-jest": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/server-test-utils": "^1.0.0-beta.29",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -42,6 +43,7 @@
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
     "vue-no-ssr": "^1.1.1",
+    "vue-server-renderer": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
