--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
     "sass-resources-loader": "^2.0.1",
+    "shortid": "^2.2.14",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
