--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "sass-loader": "^7.2.0",
     "sass-resources-loader": "^2.0.1",
     "shortid": "^2.2.14",
+    "storybook-vue-router": "^1.0.3",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
     "vue-no-ssr": "^1.1.1",
+    "vue-router": "^3.1.2",
     "vue-server-renderer": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
