--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,54 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "jest": true,
-  },
-  "extends": [
-    "plugin:vue/essential",
-    "@vue/airbnb"
-  ],
-  "parserOptions": {
-    "parser": "babel-eslint"
-  }
+    "root": true,
+    "env": {
+        "browser": true,
+        "jest": true
+    },
+    rules: {
+        'no-console': 'off',
+        // 'import/no-unresolved': 0,
+        'import/no-extraneous-dependencies': [
+            'error',
+            {
+                optionalDependencies: [
+                    'test/unit/index.js',
+                ],
+            },
+        ],
+        'no-debugger': 0,
+        'no-restricted-globals': 0,
+        indent: ['error', 4, {SwitchCase: 1}],
+        'object-curly-spacing': ['error', 'never'],
+        'linebreak-style': 0,
+        'no-param-reassign': 0,
+        quotes: ['error', 'single', {allowTemplateLiterals: true}],
+        'vue/script-indent': ['error', 4, {baseIndent: 1, switchCase: 1}], // fix indent in script tags
+        'no-underscore-dangle': ['error', {allow: ['_links', '_embedded']}]
+    },
+    "extends": [
+        "plugin:vue/base",
+        "@vue/airbnb"
+    ],
+    overrides: [
+        {
+            files: [
+                '*.vue'
+            ],
+            rules: {
+                'max-len': 'off',
+                // disables line length check
+                indent: 'off'
+            }
+        }
+    ],
+    "parserOptions": {
+        "parser": "babel-eslint"
+    },
+    settings: {
+        'import/resolver': {
+            node: {
+                extensions: ['.js', '.jsx', '.vue'],
+            },
+        },
+    }
 }
