--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kekcomponents",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "description": "Officail Rebilly front-end components library",
   "main": ".dist/rebilly-recomponents.common.js",
   "author": "Rebilly SRL",
@@ -10,7 +10,8 @@
     "lint": "vue-cli-service lint",
     "build": "vue-cli-service build --target lib --name rebilly-recomponents 'src/components/index.js'",
     "storybook": "start-storybook -p 9001  -s public",
-    "build-storybook": "build-storybook -c .storybook -o .out"
+    "build-storybook": "build-storybook -c .storybook -o .out",
+    "semantic-release": "semantic-release"
   },
   "files": [
     "package.json",
@@ -18,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:Rebilly/rebilly-recomponents.git"
+    "url": "https://github.com/Rebilly/rebilly-recomponents.git"
   },
   "keywords": [
     "Rebilly",
@@ -69,14 +70,27 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/commit-analyzer": "^6.3.0",
+    "@semantic-release/git": "^7.0.16",
+    "@semantic-release/github": "^5.4.2",
+    "@semantic-release/npm": "^5.1.13",
+    "@semantic-release/release-notes-generator": "^7.3.0",
     "babel-jest": "^24.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel7-jest": "^1.0.1",
+    "cz-conventional-changelog": "^3.0.2",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
+    "semantic-release": "^15.13.21",
     "vue-jest": "^3.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
