--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
     "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
     "sass-resources-loader": "^2.0.1",
     "shortid": "^2.2.14",
     "storybook-vue-router": "^1.0.3",
+    "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
