--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Rebilly SRL",
   "license": "MIT",
   "scripts": {
-     "compile-sass": "node-sass src/style/r-badge.scss src/style/r-badge.css",
+    "compile-sass": "node-sass src/style/r-badge.scss src/style/r-badge.css",
+    "compile-sass-watch": "node-sass -w src/style -o src/style",
     "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "build": "npm run build:wc & npm run build:lib",
