--- a/.releaserc
+++ b/.releaserc
@@ -5,12 +5,13 @@
         {
             "path": "@semantic-release/git",
             "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
-            "assets": [".dist/**/*.{html,js,css,map}", "package.json", "CHANGELOG.md"]
+            "assets": ["package.json", "CHANGELOG.md"]
         }
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
-        "@semantic-release/github"
+        "@semantic-release/github",
+        "@semantic-release/npm"
     ]
 }
