--- a/package.json
+++ b/package.json
@@ -41,6 +41,19 @@
     "@storybook/addon-notes": "^5.1.10",
     "@storybook/addon-storysource": "^5.1.10",
     "@storybook/vue": "^5.1.10",
+    "storybook-vue-router": "^1.0.3",
+    "shortid": "^2.2.14",
+    "v-calendar": "^0.9.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/commit-analyzer": "^6.3.0",
+    "@semantic-release/git": "^7.0.16",
+    "@semantic-release/github": "^5.4.2",
+    "@semantic-release/npm": "^5.1.13",
+    "@semantic-release/release-notes-generator": "^7.3.0",
     "@vue/babel-preset-app": "^3.10.0",
     "@vue/cli": "^3.11.0",
     "@vue/cli-plugin-babel": "^3.10.0",
@@ -55,6 +68,8 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel7-jest": "^1.0.1",
     "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
@@ -62,9 +77,14 @@
     "moment-timezone": "^0.5.23",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
-    "shortid": "^2.2.14",
-    "storybook-vue-router": "^1.0.3",
-    "v-calendar": "^0.9.7",
+    
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-serializer-html": "^7.0.0",
+    "jest-serializer-vue": "^2.0.2",
+    "semantic-release": "^15.13.21",
+    "vue-jest": "^3.0.4",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
     "vue-loader": "^15.7.1",
@@ -72,26 +92,6 @@
     "vue-router": "^3.1.2",
     "vue-server-renderer": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/commit-analyzer": "^6.3.0",
-    "@semantic-release/git": "^7.0.16",
-    "@semantic-release/github": "^5.4.2",
-    "@semantic-release/npm": "^5.1.13",
-    "@semantic-release/release-notes-generator": "^7.3.0",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel7-jest": "^1.0.1",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
-    "jest-css-modules": "^2.1.0",
-    "jest-serializer-html": "^7.0.0",
-    "jest-serializer-vue": "^2.0.2",
-    "semantic-release": "^15.13.21",
-    "vue-jest": "^3.0.4"
   },
   "peerDependencies": {
     "vue": "^2.6.0"
