fix(tools): try to allow to publish scoped package

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -28,6 +28,9 @@
     "Rebilly",
     "Vue"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">= 10",
     "yarn": ">= 1.12.0"
