--- a/packages/gridsome/package.json
+++ b/packages/gridsome/package.json
@@ -1,13 +1,26 @@
 {
   "name": "recomponents-demo-gridsome",
+  "description": "Recomponents demo with Gridsome",
+  "version": "1.0.0",
+  "author": "Rebilly SRL",
+  "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rebilly/rebilly-recomponents.git"
+  },
+  "engines": {
+    "node": ">= 10",
+    "yarn": ">= 1.12.0"
+  },
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.6.0",
-    "@rebilly/recomponents": "^1.0.0"
+    "@rebilly/recomponents": "^1.0.2",
+    "core-js": "^2.6.5",
+    "gridsome": "^0.6.0"
   }
 }
