--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -1,9 +1,18 @@
 {
   "name": "recomponents-demo-nuxt",
+  "description": "Recomponents demo with Nuxt",
   "version": "1.0.0",
-  "description": "Recomponents demo project with Nuxt",
   "author": "Rebilly SLR",
-  "private": false,
+  "license": "MIT",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rebilly/rebilly-recomponents.git"
+  },
+  "engines": {
+    "node": ">= 10",
+    "yarn": ">= 1.12.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -25,6 +34,7 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-utils": "^1.4.1",
     "prettier": "^1.16.4",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
