feat(styles): add stylelint and set up the rules (#16)

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "scripts": {
     "test": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
+    "lint": "npm run lint:js & npm run lint:styles",
+    "lint:js": "vue-cli-service lint",
+    "lint:styles": "stylelint **/*.scss",
     "build": "npm run build:wc & npm run build:lib",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/components/**/*.vue'",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js'",
@@ -46,8 +48,8 @@
     "@storybook/vue": "^5.1.10",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
-    "storybook-vue-router": "^1.0.3",
     "shortid": "^2.2.14",
+    "storybook-vue-router": "^1.0.3",
     "v-calendar": "^0.9.7"
   },
   "devDependencies": {
@@ -72,23 +74,24 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-vue": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-vue": "^2.0.2",
     "babel7-jest": "^1.0.1",
     "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
     "semantic-release": "^15.13.21",
-    "vue-jest": "^3.0.4",
+    "stylelint": "^10.1.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
+    "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.1",
     "vue-no-ssr": "^1.1.1",
     "vue-router": "^3.1.2",
