--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -38,21 +38,13 @@
     "yarn": ">= 1.12.0"
   },
   "dependencies": {
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "shortid": "^2.2.14",
     "v-calendar": "^0.9.7"
   },
   "devDependencies": {
-    "storybook-vue-router": "^1.0.3",
-    "@storybook/addon-a11y": "^5.1.10",
-    "@storybook/addon-actions": "^5.1.10",
-    "@storybook/addon-contexts": "^5.1.10",
-    "@storybook/addon-cssresources": "^5.1.10",
-    "@storybook/addon-knobs": "^5.1.10",
-    "@storybook/addon-notes": "^5.1.10",
-    "@storybook/addon-storysource": "^5.1.10",
-    "@storybook/vue": "^5.1.10",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@semantic-release/changelog": "^3.0.4",
@@ -61,6 +53,14 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.3.0",
+    "@storybook/addon-a11y": "^5.1.10",
+    "@storybook/addon-actions": "^5.1.10",
+    "@storybook/addon-contexts": "^5.1.10",
+    "@storybook/addon-cssresources": "^5.1.10",
+    "@storybook/addon-knobs": "^5.1.10",
+    "@storybook/addon-notes": "^5.1.10",
+    "@storybook/addon-storysource": "^5.1.10",
+    "@storybook/vue": "^5.1.10",
     "@vue/babel-preset-app": "^3.10.0",
     "@vue/cli": "^3.11.0",
     "@vue/cli-plugin-babel": "^3.10.0",
@@ -88,6 +88,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
     "semantic-release": "^15.13.21",
+    "storybook-vue-router": "^1.0.3",
     "stylelint": "^10.1.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.12.0",
