--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -38,6 +38,7 @@
     "yarn": ">= 1.12.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
