--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -12,7 +12,7 @@
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
     "build": "npm run build:wc & npm run build:lib",
-    "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/components/**/*.vue'",
+    "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue'",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js'",
     "storybook": "start-storybook -p 9001  -s public",
     "build-storybook": "build-storybook -c .storybook -o ../../docs",
