--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -38,6 +38,7 @@
     "yarn": ">= 1.10.1"
   },
   "dependencies": {
+    "approximate-number": "^2.0.0",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
