--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -84,6 +84,7 @@
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
+    "jest-mock": "^24.9.0",
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.12.0",
