chore(build): run script subcommands sequentially

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -8,10 +8,10 @@
   "license": "MIT",
   "scripts": {
     "test": "vue-cli-service test:unit",
-    "lint": "npm run lint:js & npm run lint:styles",
+    "lint": "npm run lint:js && npm run lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
-    "build": "npm run build:wc & npm run build:lib",
+    "build": "npm run build:wc && npm run build:lib",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue'",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js'",
     "storybook": "start-storybook -p 9001  -s public",
