--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -53,14 +53,14 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.3.0",
-    "@storybook/addon-a11y": "^5.2.6",
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-contexts": "^5.2.6",
-    "@storybook/addon-cssresources": "^5.2.6",
-    "@storybook/addon-knobs": "^5.2.6",
-    "@storybook/addon-notes": "^5.2.6",
-    "@storybook/addon-storysource": "^5.2.6",
-    "@storybook/vue": "^5.2.6",
+    "@storybook/addon-a11y": "5.1.9",
+    "@storybook/addon-actions": "5.1.9",
+    "@storybook/addon-contexts": "5.1.9",
+    "@storybook/addon-cssresources": "5.1.9",
+    "@storybook/addon-knobs": "5.1.9",
+    "@storybook/addon-notes": "5.1.9",
+    "@storybook/addon-storysource": "5.1.9",
+    "@storybook/vue": "5.1.9",
     "@vue/babel-preset-app": "^3.10.0",
     "@vue/cli": "^3.11.0",
     "@vue/cli-plugin-babel": "^3.10.0",
