--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: Node CI
 on:
   push:
-    branches:
-    - master
+    branches: [master]
+  pull_request:
+    types: [assigned, opened, synchronize, reopened]
 jobs:
   build:
     runs-on: ubuntu-latest
