--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -1,11 +1,11 @@
-name: Node CI
+name: Check
 on:
   push:
     branches: [master]
   pull_request:
     types: [assigned, opened, synchronize, reopened]
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,6 +22,32 @@ jobs:
       working-directory: packages/recomponents
       run: |
         yarn
+  compile:
+    runs-on: ubuntu-latest
+    needs: setup
+    strategy:
+      matrix:
+        node-version: [10.x]
+    env:
+      NODE_ENV: test
+    steps:
+    - name: Build Recomponents
+      working-directory: packages/recomponents
+      run: |
+        yarn build
+    - name: Build Storybook
+      working-directory: packages/recomponents
+      run: |
+        yarn build-storybook
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    strategy:
+      matrix:
+        node-version: [10.x]
+    env:
+      NODE_ENV: test
+    steps:
     - name: Run Linter
       working-directory: packages/recomponents
       run: |
@@ -30,5 +56,3 @@ jobs:
       working-directory: packages/recomponents
       run: |
         yarn test
-      env:
-        CI: true
