--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -8,10 +8,10 @@
   "license": "MIT",
   "scripts": {
     "test": "vue-cli-service test:unit",
-    "lint": "npm run lint:js && npm run lint:styles",
+    "lint": "run-s lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
-    "build": "npm run build:wc && npm run build:lib",
+    "build": "run-s build:wc build:lib",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue'",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js'",
     "storybook": "start-storybook -p 9001  -s public",
@@ -88,6 +88,7 @@
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^7.2.0",
     "semantic-release": "^15.13.21",
     "storybook-vue-router": "^1.0.7",
