--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -11,9 +11,10 @@
     "lint": "run-s lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
-    "build": "run-s build:wc build:lib",
+    "build": "run-s clean:dist build:wc build:lib",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
+    "clean:dist": "rimraf ./dist/**/*",
     "storybook": "start-storybook -p 9001  -s public",
     "build-storybook": "build-storybook -c .storybook -o ../../docs",
     "semantic-release": "semantic-release"
@@ -89,6 +90,7 @@
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
     "sass-loader": "^7.2.0",
     "semantic-release": "^15.13.21",
     "storybook-vue-router": "^1.0.7",
