--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     }
   },
   "devDependencies": {
-    "semantic-release": "^15.13.24",
-    "cz-conventional-changelog": "^3.0.2"
+    "cz-conventional-changelog": "^3.0.2",
+    "semantic-release": "^15.13.24"
   },
   "scripts": {
     "semantic-release": "semantic-release"
