--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
+    "lodash.kebabcase": "^4.1.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "shortid": "^2.2.14",
