--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -46,7 +46,6 @@
     "v-calendar": "^0.9.7"
   },
   "devDependencies": {
-    "core-js": "^3.4.3",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@semantic-release/changelog": "^3.0.4",
@@ -55,14 +54,16 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.3.0",
-    "@storybook/addon-a11y": "5.1.9",
-    "@storybook/addon-actions": "5.1.9",
-    "@storybook/addon-contexts": "5.1.9",
-    "@storybook/addon-cssresources": "5.1.9",
-    "@storybook/addon-knobs": "5.1.9",
-    "@storybook/addon-notes": "5.1.9",
-    "@storybook/addon-storysource": "5.1.9",
-    "@storybook/vue": "5.1.9",
+    "@storybook/addon-a11y": "5.3.0-alpha.9",
+    "@storybook/addon-actions": "5.3.0-alpha.9",
+    "@storybook/addon-contexts": "5.3.0-alpha.9",
+    "@storybook/addon-cssresources": "5.3.0-alpha.9",
+    "@storybook/addon-docs": "5.3.0-alpha.9",
+    "@storybook/addon-knobs": "5.3.0-alpha.9",
+    "@storybook/addon-links": "5.3.0-alpha.9",
+    "@storybook/addon-notes": "5.3.0-alpha.9",
+    "@storybook/addon-storysource": "5.3.0-alpha.9",
+    "@storybook/vue": "5.3.0-alpha.9",
     "@vue/babel-preset-app": "^3.10.0",
     "@vue/cli": "^4.1.1",
     "@vue/cli-plugin-babel": "^4.1.1",
@@ -80,6 +81,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-vue": "^2.0.2",
     "babel7-jest": "^1.0.1",
+    "core-js": "^3.4.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^24.8.0",
@@ -93,7 +95,9 @@
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "semantic-release": "^15.13.21",
+    "storybook-addon-vue-info": "^1.3.4",
     "storybook-vue-router": "^1.0.7",
+    "style-loader": "^1.0.1",
     "stylelint": "^10.1.0",
     "vue": "^2.6.10",
     "vue-jest": "^3.0.4",
