--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -7,7 +7,9 @@
   "author": "Rebilly SRL",
   "license": "MIT",
   "scripts": {
-    "test": "vue-cli-service test:unit",
+    "test": "run-s test:*",
+    "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
+    "test:image-snapshots": "run-s build-storybook build-image-snapshots",
     "lint": "run-s lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
@@ -17,6 +19,7 @@
     "clean:dist": "rimraf ./dist/**/*",
     "storybook": "start-storybook -p 9001  -s public",
     "build-storybook": "build-storybook -c .storybook -o ../../docs",
+    "build-image-snapshots": "cross-env NODE_ENV=test jest --projects=./.image-snapshots",
     "semantic-release": "semantic-release"
   },
   "files": [
@@ -65,6 +68,8 @@
     "@storybook/addon-knobs": "5.3.0-alpha.9",
     "@storybook/addon-links": "5.3.0-alpha.9",
     "@storybook/addon-notes": "5.3.0-alpha.9",
+    "@storybook/addon-storyshots": "^5.2.8",
+    "@storybook/addon-storyshots-puppeteer": "^5.2.8",
     "@storybook/addon-storysource": "5.3.0-alpha.9",
     "@storybook/vue": "5.3.0-alpha.9",
     "@vue/babel-preset-app": "^3.10.0",
@@ -81,20 +86,26 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-vue": "^2.0.2",
     "babel7-jest": "^1.0.1",
     "core-js": "^3.4.3",
+    "cross-env": "^6.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "glob": "^7.1.6",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-css-modules": "^2.1.0",
+    "jest-image-snapshot": "^2.11.1",
     "jest-mock": "^24.9.0",
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
+    "markdown-loader-jest": "^0.1.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "require-context": "^1.1.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "semantic-release": "^15.13.21",
