--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -14,6 +14,7 @@
     "build": "run-s clean:dist build:wc build:lib",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
+    "build:theme": "node-sass src/style/theme.scss dist/theme.css",
     "clean:dist": "rimraf ./dist/**/*",
     "storybook": "start-storybook -p 9001  -s public",
     "build-storybook": "build-storybook -c .storybook -o ../../docs",
