--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -7,7 +7,7 @@
   "author": "Rebilly SRL",
   "license": "MIT",
   "scripts": {
-    "test": "run-s test:*",
+    "test": "run-s test:unit",
     "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
     "test:image-snapshots": "run-s build-storybook build-image-snapshots",
     "lint": "run-s lint:js lint:styles",
