ci(.travis.yml): add build-storybook command before docker image-snapshots command
We should build the app before the image-snapshots testing will be runned, add travis command
build-storybook before docker run

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ jobs:
         - cd packages/recomponents
       after_script:
         # run image-snapshot tests in the docker
+        - yarn build-storybook
         - docker-compose -f ./.image-snapshots/docker-compose.yml up --build
       script:
         - yarn lint
