--- a/packages/recomponents/.image-snapshots/docker-compose.yml
+++ b/packages/recomponents/.image-snapshots/docker-compose.yml
@@ -11,7 +11,4 @@ services:
       PUPPETEER_EXECUTABLE_PATH: google-chrome-unstable
     volumes:
       - ./:/home/pptruser/rebilly/rebilly-recomponents/packages/recomponents/.image-snapshots
-      - ../../../docs:/home/pptruser/rebilly/rebilly-recomponents/docs
-      - ../.storybook:/home/pptruser/rebilly/rebilly-recomponents/packages/recomponents/.storybook
-      - ../node_modules:/home/pptruser/rebilly/rebilly-recomponents/packages/recomponents/node_modules
-    command: "yarn run build-image-snapshots"
+    command: "yarn run test:image-snapshots"
