--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -43,6 +43,7 @@
     "yarn": ">= 1.10.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "css-vars-ponyfill": "^2.1.2",
     "intersection-observer": "^0.7.0",
     "lodash.clonedeep": "^4.5.0",
@@ -69,11 +70,11 @@
     "@storybook/addon-knobs": "5.3.0-alpha.9",
     "@storybook/addon-links": "5.3.0-alpha.9",
     "@storybook/addon-notes": "5.3.0-alpha.9",
-    "@storybook/addon-storyshots": "^5.2.8",
-    "@storybook/addon-storyshots-puppeteer": "^5.2.8",
+    "@storybook/addon-storyshots": "^5.3.0-beta.9",
+    "@storybook/addon-storyshots-puppeteer": "^5.3.0-beta.9",
     "@storybook/addon-storysource": "5.3.0-alpha.9",
     "@storybook/vue": "5.3.0-alpha.9",
-    "@vue/babel-preset-app": "^3.10.0",
+    "@vue/babel-preset-app": "^4.1.1",
     "@vue/cli": "^4.1.1",
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-eslint": "^4.1.1",
