--- a/packages/recomponents/.image-snapshots/docker-compose.yml
+++ b/packages/recomponents/.image-snapshots/docker-compose.yml
@@ -11,4 +11,5 @@ services:
       PUPPETEER_EXECUTABLE_PATH: google-chrome-unstable
     volumes:
       - ./:/home/pptruser/rebilly/rebilly-recomponents/packages/recomponents/.image-snapshots
-    command: "yarn run test:image-snapshots"
+      - ../../../docs:/home/pptruser/rebilly/rebilly-recomponents/docs
+    command: "yarn run build-image-snapshots"
