--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   },
   "scripts": {
     "semantic-release": "semantic-release"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4"
   }
 }
