--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -64,24 +64,24 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.3.0",
-    "@storybook/addon-a11y": "5.3.0-alpha.9",
-    "@storybook/addon-actions": "5.3.0-alpha.9",
-    "@storybook/addon-contexts": "5.3.0-alpha.9",
-    "@storybook/addon-cssresources": "5.3.0-alpha.9",
-    "@storybook/addon-docs": "5.3.0-alpha.9",
-    "@storybook/addon-knobs": "5.3.0-alpha.9",
-    "@storybook/addon-links": "5.3.0-alpha.9",
-    "@storybook/addon-notes": "5.3.0-alpha.9",
-    "@storybook/addon-storyshots": "^5.3.0-beta.9",
-    "@storybook/addon-storyshots-puppeteer": "^5.3.0-beta.9",
-    "@storybook/addon-storysource": "5.3.0-alpha.9",
-    "@storybook/vue": "5.3.0-alpha.9",
+    "@storybook/addon-a11y": "^5.3.3",
+    "@storybook/addon-actions": "^5.3.3",
+    "@storybook/addon-contexts": "^5.3.3",
+    "@storybook/addon-cssresources": "^5.3.3",
+    "@storybook/addon-docs": "^5.3.3",
+    "@storybook/addon-knobs": "^5.3.3",
+    "@storybook/addon-links": "^5.3.3",
+    "@storybook/addon-notes": "^5.3.3",
+    "@storybook/addon-storyshots": "^5.3.3",
+    "@storybook/addon-storyshots-puppeteer": "^5.3.3",
+    "@storybook/addon-storysource": "^5.3.3",
+    "@storybook/vue": "^5.3.3",
     "@vue/babel-preset-app": "^4.1.1",
-    "@vue/cli": "^4.1.1",
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-eslint": "^4.1.1",
-    "@vue/cli-plugin-unit-jest": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
+    "@vue/cli": "^4.1.2",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-unit-jest": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/server-test-utils": "^1.0.0-beta.29",
     "@vue/test-utils": "^1.0.0-beta.29",
