--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -56,8 +56,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.5.5",
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/commit-analyzer": "^6.3.0",
     "@semantic-release/git": "^7.0.16",
@@ -66,6 +66,7 @@
     "@semantic-release/release-notes-generator": "^7.3.0",
     "@storybook/addon-a11y": "^5.3.7",
     "@storybook/addon-actions": "^5.3.7",
+    "@storybook/addon-centered": "^5.3.8",
     "@storybook/addon-contexts": "^5.3.7",
     "@storybook/addon-cssresources": "^5.3.7",
     "@storybook/addon-docs": "^5.3.7",
