--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -122,7 +122,8 @@
     "vue-no-ssr": "^1.1.1",
     "vue-router": "^3.1.2",
     "vue-server-renderer": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuelidate": "^0.7.5"
   },
   "peerDependencies": {
     "vue": "^2.6.0"
