--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -28,11 +28,13 @@
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "^7.8.4",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "core-js": "3",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
