--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "devDependencies": {
+    "@vue/cli-plugin-eslint": "^4.1.2",
     "cz-conventional-changelog": "^3.0.2",
     "semantic-release": "^15.13.24"
   },
