--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -17,7 +17,7 @@
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
     "build:theme": "node-sass src/styles/recomm.scss dist/recomm.css",
-    "dev": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --watch",
+    "dev": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --watch --mode production",
     "clean:dist": "rimraf ./dist/**/*",
     "storybook": "start-storybook -p 9001  -s ./public",
     "build-storybook": "build-storybook -c .storybook -o ../../docs -s ./public",
