--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -113,13 +113,18 @@ jobs:
     - name: Restore symlinks
       run: |
         yarn
-    - name: Build Storybook
-      run: |
-        yarn workspace @rebilly/recomponents build-storybook
+    - name: Download Storybook build
+      uses: actions/download-artifact@master
+      with:
+        name: Storybook
+        path: ./
+    - name: Uncompress Storybook build
+      run: unzip storybook.zip
     - name: Run snapshot tests
       run: |
         docker-compose -f ./packages/recomponents/.image-snapshots/docker-compose.yml up --build
   ssr:
+    name: Verify SSR
     runs-on: ubuntu-latest
     needs: [setup, compile]
     strategy:
