--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ coverage
 # nyc test coverage
 .nyc_output
 
+# Build artifacts
+*.zip
+
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
