--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       working-directory: packages/recomponents
       run: |
-        yarn
+        yarn --no-bin-links
     - name: Compress directory
       run: zip -r directory.zip .
     - name: Upload artifact
@@ -52,10 +52,10 @@ jobs:
     # - name: Build Recomponents 1
     #   run: |
     #     yarn workspace @rebilly/recomponents build
-    - name: Add install
-      working-directory: packages/recomponents
-      run: |
-        yarn global add npm-run-all
+    # - name: Add install
+    #   working-directory: packages/recomponents
+    #   run: |
+    #     yarn global add npm-run-all
     - name: Build Recomponents 2
       working-directory: packages/recomponents
       run: |
