--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -10,10 +10,10 @@
     "test": "run-s test:unit",
     "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
     "test:image-snapshots": "run-s build-storybook build-image-snapshots",
-    "lint": "run-s lint:js lint:styles",
+    "lint": "concurrently \"yarn lint:js\" \"lint:styles\"",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
-    "build": "run-s clean:dist build:wc build:lib build:theme",
+    "build": "concurrently \"yarn build:wc\"   \"yarn build:lib\"   \"yarn build:lib\" \"yarn build:theme\"",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
     "build:theme": "node-sass src/styles/recomm.scss dist/recomm.css",
@@ -96,6 +96,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-vue": "^2.0.2",
     "babel7-jest": "^1.0.1",
+    "concurrently": "^5.1.0",
     "core-js": "^3.4.3",
     "cross-env": "^6.0.3",
     "eslint": "^5.16.0",
