--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -47,8 +47,9 @@ jobs:
     - name: Uncompress directory
       run: unzip directory.zip
     - name: Kek
-      run: ls node_modules
-      run: ls packages/recomponents/node_modules
+      run: |
+        ls node_modules
+        ls packages/recomponents/node_modules
     - name: Restore symlinks
       run: |
         yarn install --frozen-lockfile
